--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <title>首页</title>
+  <title>Redux</title>
 </head>
 
 <body>
